2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* os/xdmauth.c:
	Coverity #833: Fix a rather nasty memory leak.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/dri/dri.c:
	Coverity #983: Move some risky debugging code inside #ifdef 
	DEBUG.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* GL/glx/glxcmds.c:
	Coverity #986: Prevent a NULL chase.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* Xext/sync.c:
	Coverity #992: Prevent a NULL chase.

2006-04-02  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxdri.c (__glXDRIscreenProbe): Use xf86LoaderCheckSymbol
	to check for DRI symbols instead of dlsym, avoiding RTLD_DEFAULT.
	(__glXDRIscreenProbe): Change GLX-DRI to AIGLX in LogMessage for
	consitency.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* hw/kdrive/ati/Makefile.am:
	* hw/kdrive/ati/ati.h:
	Disable building DRI support in Xati for now.

2006-04-01  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Disable Xprint freetype support momentarily.  Needs ttf2pt1.c, which
	exists in the monolith but has an advertising clause in the license.

	* Xprint/ps/PsFTFonts.c:
	* Xprint/ps/psout_ft.c:
	* Xprint/ps/psout_ftpstype1.c:
	* Xprint/ps/psout_ftpstype3.c:
	Fix some includes to point into X11/fonts/ properly.

	* configure.ac:
	* hw/dmx/dmxextension.c:
	Reorder link order for Xdmx to fix new screensaver variable reference
	properly; remove previous awful hack.

2006-04-01  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_accel.c: (exaCopyWindow):
	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrFinishPipelinedAccess),
	(ephyrUploadToScreen):
	Clean up warnings and a debug printf.

2006-04-01  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaValidateGC):
	Pull out fb's tile handling during fbValidateGC so we can do the
	necessary exaPrepare/FinishAccess()es.  Revealed by xtest with fakexa.

2006-04-01  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/dmxextension.c:
	Hack around the new screensaver variable for DMX, which is otherwise